--- a/EcoCareApp/EcoCareApp/Views/RegisterOwner.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterOwner.xaml
@@ -39,50 +39,62 @@
                                 <RowDefinition Height="40"></RowDefinition>
                                 <RowDefinition Height="40"></RowDefinition>
                                 <RowDefinition Height="40"></RowDefinition>
+                                <RowDefinition Height="40"></RowDefinition>
 
                                 <!--Back Button-->
                         </Grid.RowDefinitions>
                             <Label Text="Register For Bussiness Owner" Grid.Row="0" Style="{StaticResource title}" FontSize="40" />
 
 
-                            
-                                <Label Text="First Name" Grid.Row="1" Style="{StaticResource labelNameStyle}" IsVisible="{Binding FirstNameTyped}"/>
-                            <Label Text="{Binding FirstNameError}" IsVisible="{Binding ShowFirstNameError}" Grid.Row="1" Style="{StaticResource labelErrorStyle}"/>
+                            <Label Grid.Row="1"  Style="{StaticResource link}" HorizontalOptions="CenterAndExpand">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="Already One Of Us? " Style="{StaticResource linkPartA}"></Span>
+                                        <Span Text="Log In" Style="{StaticResource linkPartB}">
+                                            <Span.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding MoveToLogIn}"></TapGestureRecognizer>
+                                            </Span.GestureRecognizers>
+                                        </Span>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                            <Label Text="First Name" Grid.Row="2" Style="{StaticResource labelNameStyle}" IsVisible="{Binding FirstNameTyped}"/>
+                            <Label Text="{Binding FirstNameError}" IsVisible="{Binding ShowFirstNameError}" Grid.Row="2" Style="{StaticResource labelErrorStyle}"/>
                         
-                        <Entry Grid.Row="2" Placeholder="Enter your first name" Text="{Binding FirstName}" Style="{StaticResource entry}"/>
+                        <Entry Grid.Row="3" Placeholder="Enter your first name" Text="{Binding FirstName}" Style="{StaticResource entry}"/>
 
-                                <Label Grid.Row="3" Text="Last Name"  Style="{StaticResource labelNameStyle}"
+                                <Label Grid.Row="4" Text="Last Name"  Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding LastNameTyped}"/>
-                                <Label Grid.Row="3" Text="{Binding LastNameError}" IsVisible="{Binding ShowLastNameError}"  Style="{StaticResource labelErrorStyle}"/>
-                        <Entry Grid.Row="4" Placeholder="Enter your last name" Text="{Binding LastName}" Style="{StaticResource entry}"/>
+                                <Label Grid.Row="4" Text="{Binding LastNameError}" IsVisible="{Binding ShowLastNameError}"  Style="{StaticResource labelErrorStyle}"/>
+                        <Entry Grid.Row="5" Placeholder="Enter your last name" Text="{Binding LastName}" Style="{StaticResource entry}"/>
 
 
 
                         
-                                <Label Grid.Row="5" Text="User Name"  Style="{StaticResource labelNameStyle}"
+                                <Label Grid.Row="6" Text="User Name"  Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding UserNameTyped}"/>
-                                <Label Grid.Row="5" Text="{Binding UserNameError}" HorizontalTextAlignment="End"
+                                <Label Grid.Row="6" Text="{Binding UserNameError}" HorizontalTextAlignment="End"
                                        IsVisible="{Binding ShowUserNameError}"  Style="{StaticResource labelErrorStyle}"/>
-                         <Entry Grid.Row="6" Placeholder="Type a username" Text="{Binding UserName}" Style="{StaticResource entry}"/>
+                         <Entry Grid.Row="7" Placeholder="Type a username" Text="{Binding UserName}" Style="{StaticResource entry}"/>
 
-                            <Label Text="Email" Grid.Row="7" Style="{StaticResource labelNameStyle}"
+                            <Label Text="Email" Grid.Row="8" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding EmailTyped}"/>
-                            <Label Text="{Binding EmailError}" HorizontalTextAlignment="End" Grid.Row="7" IsVisible="{Binding ShowEmailError}"  Style="{StaticResource labelErrorStyle}"/>
+                            <Label Text="{Binding EmailError}" HorizontalTextAlignment="End" Grid.Row="8" IsVisible="{Binding ShowEmailError}"  Style="{StaticResource labelErrorStyle}"/>
                         
-                        <Entry Grid.Row="8" Placeholder="Type an email" Text="{Binding Email}" Style="{StaticResource entry}"/>
+                        <Entry Grid.Row="9" Placeholder="Type an email" Text="{Binding Email}" Style="{StaticResource entry}"/>
 
 
 
 
 
 
-                            <Label Text="Password" Grid.Row="9" Style="{StaticResource labelNameStyle}"
+                            <Label Text="Password" Grid.Row="10" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding PasswordTyped}"/>
-                            <Label Text="{Binding PasswordError}" Grid.Row="9" IsVisible="{Binding ShowPasswordError}"
+                            <Label Text="{Binding PasswordError}" Grid.Row="10" IsVisible="{Binding ShowPasswordError}"
                         Style="{StaticResource labelErrorStyle}"/>
                         
 
-                        <Grid Grid.Row="10">
+                        <Grid Grid.Row="11">
                             <Entry Placeholder="Password"
                 IsPassword="{Binding Source={x:Reference ShowPasswordActualTrigger}, Path=HidePassword}" 
                        Text="{Binding Password}" Style="{StaticResource entry}"/>
@@ -103,24 +115,25 @@
                         </Grid>
 
 
-                            <Label Text="Phone number" Grid.Row="11" Style="{StaticResource labelNameStyle}"
+                            <Label Text="Phone number" Grid.Row="12" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding PhoneNumTyped}"/>
-                            <Label Text="{Binding PhoneNumError}" Grid.Row="11" IsVisible="{Binding ShowPhoneNumError}"  Style="{StaticResource labelErrorStyle}"/>
-                        <Entry Grid.Row="12" Placeholder="Type your phone number" Text="{Binding PhoneNum}" Style="{StaticResource entry}" Keyboard="Numeric"/>
+                            <Label Text="{Binding PhoneNumError}" Grid.Row="12" IsVisible="{Binding ShowPhoneNumError}"  Style="{StaticResource labelErrorStyle}"/>
+                        <Entry Grid.Row="13" Placeholder="Type your phone number" Text="{Binding PhoneNum}" Style="{StaticResource entry}" Keyboard="Numeric"/>
 
 
-                            <Label Text="Country" Grid.Row="13" Style="{StaticResource labelNameStyle}"
+                            <Label Text="Country" Grid.Row="14" Style="{StaticResource labelNameStyle}"
                        />
-                            <Label Text = "{Binding SelectedCountry, StringFormat='You Selected {0:F0} As Your Country'}" IsVisible="{Binding CountrySelected}" Grid.Row="14"/>
-                            <Label Text= "Please choose country" Grid.Row="14" IsVisible="{Binding CountryNotSelected}" />
+                            <Label Text = "{Binding SelectedCountry, StringFormat='You Selected {0:F0} As Your Country'}" 
+                                   IsVisible="{Binding CountrySelected}" Grid.Row="15"/>
+                            <Label Text= "Please choose country" Grid.Row="15" IsVisible="{Binding CountryNotSelected}" />
 
-                            <Button Text="Choose Country" Grid.Row="15" Command="{Binding ToCountries}" />
+                            <Button Text="Choose Country" Grid.Row="16" Command="{Binding ToCountries}" />
 
                             
                    
 
 
-                        <Button Text="Sign Up" Grid.Row="16" Command="{Binding ResigterUser}"></Button>
+                        <Button Text="Sign Up" Grid.Row="17" Command="{Binding ResigterUser}"></Button>
                     </Grid>
                     </ScrollView>
 
