--- a/EcoCareApp/EcoCareApp/Views/Home.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Home.xaml
@@ -44,7 +44,7 @@
                         <StackLayout>
                             <Grid BackgroundColor="White" IsVisible="{Binding RegularUser}">
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="22"/>
+                                    <RowDefinition Height="25"/>
                                     <RowDefinition Height="300"/>
                                     <RowDefinition Height="10"/>
                                     <RowDefinition Height="0.1*"/>
@@ -55,7 +55,7 @@
                                 <Label
                         FontSize="20"
                         Style="{StaticResource DescriptionLabelStyle}"
-                        TextColor="#184e77" Text="{Binding Stars, StringFormat='{0:F0}★'}"
+                        TextColor="#184e77" Text="{Binding app.Stars, StringFormat='{0:F0}★'}"
                         HorizontalTextAlignment="End" HorizontalOptions="End" 
                             Grid.Row="0"/>
                                 <Grid Grid.Row="1"  x:Name="firstRow">
