--- a/EcoCareApp/EcoCareApp/Views/Products.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Products.xaml
@@ -18,7 +18,7 @@
                         <Label
                         FontSize="20"
                         Style="{StaticResource DescriptionLabelStyle}"
-                        TextColor="#184e77" Text="{Binding Stars, StringFormat='{0:F0}★'}"
+                        TextColor="#184e77" Text="{Binding app.Stars, StringFormat='{0:F0}★'}"
                         HorizontalTextAlignment="End" HorizontalOptions="End" />
 
                     </Grid>
