--- a/EcoCareApp/EcoCareApp/Views/CarbonFootprintPopUp.xaml
+++ b/EcoCareApp/EcoCareApp/Views/CarbonFootprintPopUp.xaml
@@ -6,12 +6,12 @@
     <StackLayout>
         <Grid HeightRequest="310" BackgroundColor="White" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
             <Grid.RowDefinitions>
-                <RowDefinition Height="60"/>
+                <RowDefinition Height="70"/>
                 <RowDefinition Height="200"/>
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
             <Label Text="{Binding CarbonFootPrint, StringFormat='Your carbon footprint is {0:N0} CO2'}" FontFamily="Amatic"
-                   FontSize="25" HorizontalOptions="CenterAndExpand" Grid.Row="0"/>
+                   FontSize="25" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" Grid.Row="0"/>
         <Image Source="footprint_popup.png" Grid.Row="1"/>
         <Button Text="Close" Command="{Binding PopUpClosed}" Grid.Row="2"/>
         </Grid>
