--- a/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
@@ -147,7 +147,7 @@
 
                             <Label Text="Country" Grid.Row="15" Style="{StaticResource labelNameStyle}"
                        />
-                            <Label Text= "Please choose country" Grid.Row="16" IsVisible="{Binding CountryNotSelected}" />
+                            <Label Text= "Please choose country" Grid.Row="16" IsVisible="{Binding CountryNotSelected}" TextColor="Red"/>
 
                             <Label Text = "{Binding SelectedCountry, StringFormat='You Selected {0:F0} As Your Country'}" IsVisible="{Binding CountrySelected}" Grid.Row="16"/>
                             <Button Text="Choose Country" Grid.Row="17" Command="{Binding ToCountries}"/>
